<resources>
    <string name="app_name" translatable="false">FitBros</string>
    <string name="nav_header_title">FitBros Workout Buddy</string>
    <string name="nav_header_subtitle">Strong Hearts. Strong Body.</string>
    <string name="nav_drawer_subtitle">FitBros Extras</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank English fragment</string>
    <string name="placeholder_greeting" translatable="false">Placeholder Greeting</string>
    <string name="home_greeting_morning">Good morning,&#160;</string>
    <string name="home_greeting_afternoon">Good afternoon,&#160;</string>
    <string name="home_greeting_evening">Good evening,&#160;</string>
    <string name="menu_home">Home</string>
    <string name="menu_upper_body">Upper Body</string>
    <string name="menu_lower_body">Lower Body</string>
    <string name="menu_core_muscles">Core Muscles</string>
    <string name="menu_cardio">Cardio</string>
    <string name="menu_cardio_long">Cardio Workout</string>
    <string name="menu_tool">Tools &#038; Calculators</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_contacts">Tech Support</string>
    <string name="menu_workouts">Workouts</string>
    <string name="submenu_upper_bicep">Bicep</string>
    <string name="submenu_upper_tricep">Tricep</string>
    <string name="submenu_upper_back">Back</string>
    <string name="submenu_lower_quad">Quads</string>
    <string name="submenu_lower_hamstring">Hamstrings</string>
    <string name="submenu_lower_calves">Calves</string>
    <string name="submenu_core_abs">Abdominals</string>
    <string name="submenu_core_obliques">Obliques</string>
    <string name="submenu_core_glutes">Glutes</string>
    <string name="submenu_cardio_machine">Machine</string>
    <string name="submenu_cardio_manual">Manual</string>
    <string name="submenu_cardio_ropes">Ropes</string>
    <string name="submenu_tools_BMI">BMI: Body Mass Index</string>
    <string name="submenu_tools_BMI_short">BMI Calculator</string>
    <string name="submenu_tools_RFM">RFM: Relative Fat Mass Index</string>
    <string name="submenu_tools_RFM_short">RFM Calculator</string>
    <string name="tool_name_BMI">BMI Calculator</string>
    <string name="tool_BMI_weight">Weight</string>
    <string name="tool_BMI_weight_hint">weight in lbs</string>
    <string name="tool_BMI_weight_hint_metric">weight in kg</string>
    <string name="tool_BMI_height">Height</string>
    <string name="tool_BMI_height_hint">height in inches</string>
    <string name="tool_BMI_height_hint_metric">height in cm</string>
    <string name="tool_BMI_result">Result</string>
    <string name="tool_BMI_result_hint">your result</string>
    <string name="tool_BMI_status">Status</string>
    <string name="tool_BMI_status_hint">your weight status</string>
    <string name="button_BMI_calculate">Calculate</string>
    <string name="tool_name_RFM">RFM Calculator</string>
    <string name="tool_RFM_waist_circumference">Waist</string>
    <string name="tool_RFM_waist_hint">waist circumference in inches</string>
    <string name="tool_RFM_waist_hint_metric">waist circumference in cm</string>
    <string name="tool_RFM_height">Height</string>
    <string name="tool_RFM_height_hint">height in inches</string>
    <string name="tool_RFM_height_hint_metric">height in cm</string>
    <string name="tool_RFM_result">Result</string>
    <string name="tool_RFM_result_hint">your result</string>
    <string name="tool_RFM_status">Status</string>
    <string name="tool_RFM_status_hint">your relative fat mass</string>
    <string name="button_RFM_calculate">Calculate</string>
    <string name="button_male">Male</string>
    <string name="button_female">Female</string>
    <string name="button_tool_alarm">Set workout alarm</string>
    <string name="button_tool_twitter">Tweet your workout</string>
    <string name="button_tool_gym_map">Find a gym</string>
    <string name="button_tool_fit_tips">Fit Tips</string>
    <string name="error_alarm">Please install alarm to complete task.</string>
    <string name="error_twitter">Please install Twitter and login to complete task.</string>
    <string name="error_maps">Please install Google Maps to complete task.</string>
    <string name="error_web">Please install software to access the web.</string>
    <string name="tool_alarm_message">Time to go to the gym!</string>
    <string name="tool_twitter_message">I%27m+at+the+gym.+%23fitbros</string>
    <string name="tool_swipe" translatable="false">&#60;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#62;</string>
    <string name="button_contact_email">Email</string>
    <string name="button_contact_text">Text</string>
    <string name="button_contact_phone">Phone</string>
    <string name="error_email">Please install Twitter and login to complete task.</string>
    <string name="error_sms">Please install software that provides you with texting services.</string>
    <string name="error_phone">Please install software that provides you with telephone services.</string>
    <string name="permission_sms">We need to access your texting services to be able to send an SMS message.</string>
    <string name="tech_support_email_subject">Attn: Tech Support for the FitBros App</string>
    <string name="tech_support_email_body_text">Hi FitBros. I would like to report an issue with the following:&#160;</string>
    <string name="tech_support_sms_message">Hi FitBros. I am having troubles with the following:&#160;</string>
    <string name="preference_name_title">Your Name</string>
    <string name="preference_name_placeholder">FitBro</string>
    <string name="preference_name_message">Customize this app with your name</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_language_message">Select your preferred language</string>
    <string name="preference_language_english" translatable="false">English</string>
    <string name="preference_language_spanish" translatable="false">Español</string>
    <string name="preference_measurement_title">Measurement</string>
    <string name="preference_measurement_message">Choose between metric and imperial measures</string>
    <string name="preference_measurement_imperial">Imperial</string>
    <string name="preference_measurement_metric">Metric</string>
    <string name="workout_name_bicep01">EZ-Bar Curls</string>
    <string name="workout_name_bicep02">Standard Bar Curls</string>
    <string name="workout_name_bicep03">Dumbbell Curls</string>
    <string name="workout_name_tricep01">Tricep Pulldowns</string>
    <string name="workout_name_tricep02">Tricep Extensions</string>
    <string name="workout_name_tricep03">Dips</string>
    <string name="workout_name_back01">Reverse-grip Upright Rows</string>
    <string name="workout_name_back02">Seated Machine Rows</string>
    <string name="workout_name_back03">Deadlifts</string>
    <string name="workout_name_quads01">Squats</string>
    <string name="workout_name_hams01">Box Jumps</string>
    <string name="workout_name_calves01">Lunges</string>
    <string name="workout_name_abd01">Battle Ropes</string>
    <string name="workout_name_obliques01">Side Oblique Crunch</string>
    <string name="workout_name_glutes01">Tire Flips</string>
    <string name="workout_name_machine01">Treadmill</string>
    <string name="workout_name_manual01">Cycling</string>
    <string name="workout_name_ropes01">Rope Climbing</string>
    <string name="workout_description_bicep01">Hold bar using the handle grip helpers on the bar and attempt to curl up and down</string>
    <string name="workout_description_bicep02">Hold bar shoulder-width apart and attempt to curl up and down</string>
    <string name="workout_description_bicep03">Hold a dumbbell in each hand and attempt to curl each hand separately</string>
    <string name="workout_description_tricep01">Slightly bend your knees and lean forward, pull down the rope and flex your triceps at the bottom</string>
    <string name="workout_description_tricep02">Hold the dumbbell over your head and lower it until your arm is fully bent down, then lift it back above your head</string>
    <string name="workout_description_tricep03">Lift yourself onto the bar and go down until your wrist is parallel with your elbows then go back up</string>
    <string name="workout_description_back01">Hold a barbell with your palms facing out and slightly bend your knees, then lower the barbell until your elbows are locked and pull the barbell back up</string>
    <string name="credit_title">Credits</string>
    <string name="credit_team_title"><u>The FitBros Team</u></string>
    <string name="credit_team_hasan" translatable="false">Hasan Muslemani</string>
    <string name="credit_team_cordelle" translatable="false">Cordelle Neufeld</string>
    <string name="credit_images_title1"><u>Images from Pexels.com</u></string>
    <string name="credit_image01" translatable="false">Dani Alejandro</string>
    <string name="credit_image02" translatable="false">Sabel Blanco</string>
    <string name="credit_image03" translatable="false">Zakaria Boumliha</string>
    <string name="credit_image04" translatable="false">William Choquette</string>
    <string name="credit_image05" translatable="false">DreamLens Production</string>
    <string name="credit_image06" translatable="false">Victor Freitas</string>
    <string name="credit_image07" translatable="false">Cesar Galeão</string>
    <string name="credit_image08" translatable="false">Anush Gorak</string>
    <string name="credit_image09" translatable="false">Oscar Machado</string>
    <string name="credit_image10" translatable="false">Leon Martinez</string>
    <string name="credit_image11" translatable="false">Pixabay</string>
    <string name="credit_image12" translatable="false">Kuldeep Singhania</string>
    <string name="credit_image13" translatable="false">Li Sun</string>
    <string name="credit_images_title2"><u>Images from Unsplash.com</u></string>
    <string name="credit_image20" translatable="false">Daniel Apodaca</string>
    <string name="credit_image21" translatable="false">Danielle Cerullo</string>
    <string name="credit_image22" translatable="false">Victor Freitas</string>
    <string name="credit_image23" translatable="false">Alexander Redl</string>
    <string name="credit_logo_title" translatable="false"><u>Logo</u></string>
    <string name="credit_logo" translatable="false">Vectors by Vecteezy.com</string>
    <string name="credit_colour_title"><u>Inspiration for Colour Palette</u></string>
    <string name="credit_colour01" translatable="false">GraphicMama.com</string>
    <string name="credit_colour02" translatable="false">HookAgency.com</string>
    <string name="credit_typo_title"><u>Typography</u></string>
    <string name="credit_typo01">Google Fonts</string>
    <string name="credit_typo02">Kaushan Script by Impallari Type</string>
    <string name="credit_translate_title"><u>Spanish Translation</u></string>
    <string name="credit_translate01">Google Translate</string>
    <string name="credit_translate02" translatable="false">Linguee.com</string>
    <string name="credit_dvlp_title"><u>Development Tools</u></string>
    <string name="credit_dvlp01" translatable="false">Adobe Photoshop CC 2019</string>
    <string name="credit_dvlp02" translatable="false">Android Studio 3.5</string>
</resources>