<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_gold_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_upper_body"
            android:icon="@drawable/ic_upper_body_gold_24dp"
            android:title="@string/menu_upper_body" />
        <item
            android:id="@+id/nav_lower_body"
            android:icon="@drawable/ic_lower_body_gold_24dp"
            android:title="@string/menu_lower_body" />
        <item
            android:id="@+id/nav_core_muscles"
            android:icon="@drawable/ic_core_muscles_gold_24dp"
            android:title="@string/menu_core_muscles" />
        <item
            android:id="@+id/nav_cardio"
            android:icon="@drawable/ic_cardio_gold_24dp"
            android:title="@string/menu_cardio" />
    </group>

    <item android:title="@string/nav_drawer_subtitle">
        <menu>

            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_calculator_gold_24dp"
                android:title="@string/menu_tool" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact_us_gold_24dp"
                android:title="@string/menu_contacts" />
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_credits_gold_24dp"
                android:title="@string/menu_credits" />
        </menu>
    </item>

</menu>
