<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/preference_name_placeholder"
        android:key="userName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/preference_name_message"
        android:title="@string/preference_name_title" />
    <ListPreference
        android:defaultValue="en"
        android:entries="@array/language_menu"
        android:entryValues="@array/language_values"
        android:key="lang"
        android:summary="@string/preference_language_message"
        android:title="@string/preference_language_title" />

    <!-- TODO 1: externalize -->
    <ListPreference
        android:defaultValue="imperial"
        android:entries="@array/measurement_menu"
        android:entryValues="@array/measurement_values"
        android:key="measure"
        android:summary="Choose between metric and imperial measures"
        android:title="Measurement" />
</PreferenceScreen>