<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fitbros.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_tools"
            app:destination="@id/nav_tools" />
        <action
            android:id="@+id/action_nav_home_to_nav_cardio"
            app:destination="@id/nav_cardio" />
        <action
            android:id="@+id/action_nav_home_to_nav_core_muscles"
            app:destination="@id/nav_core_muscles" />
        <action
            android:id="@+id/action_nav_home_to_nav_lower_body"
            app:destination="@id/nav_lower_body" />
        <action
            android:id="@+id/action_nav_home_to_nav_upper_body"
            app:destination="@id/nav_upper_body" />
    </fragment>
    <fragment
        android:id="@+id/nav_upper_body"
        android:name="com.example.fitbros.Fragments.UpperBodyFragment"
        android:label="@string/menu_upper_body"
        tools:layout="@layout/fragment_upper_body" >
        <action
            android:id="@+id/action_nav_upper_body_to_workoutFragment"
            app:destination="@id/workoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_lower_body"
        android:name="com.example.fitbros.Fragments.LowerBodyFragment"
        android:label="@string/menu_lower_body"
        tools:layout="@layout/fragment_lower_body" >
        <action
            android:id="@+id/action_nav_lower_body_to_workoutFragment"
            app:destination="@id/workoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_core_muscles"
        android:name="com.example.fitbros.Fragments.CoreFragment"
        android:label="@string/menu_core_muscles"
        tools:layout="@layout/fragment_core" >
        <action
            android:id="@+id/action_nav_core_muscles_to_workoutFragment"
            app:destination="@id/workoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_cardio"
        android:name="com.example.fitbros.Fragments.CardioFragment"
        android:label="@string/menu_cardio"
        tools:layout="@layout/fragment_cardio" >
        <action
            android:id="@+id/action_nav_cardio_to_workoutFragment"
            app:destination="@id/workoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.fitbros.Fragments.ToolFragment"
        android:label="@string/menu_tool"
        tools:layout="@layout/fragment_tool" >
        <action
            android:id="@+id/action_nav_tool_to_calculator_bmi"
            app:destination="@+id/toolFragmentBMI" />
    </fragment>
    <fragment
        android:id="@+id/nav_credits"
        android:name="com.example.fitbros.Fragments.CreditsFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />
    <fragment
        android:id="@+id/workoutFragment"
        android:name="com.example.fitbros.Fragments.WorkoutFragment"
        android:label="Workouts"
        tools:layout="@layout/fragment_workout" />
    <fragment
        android:id="@+id/toolFragmentBMI"
        android:name="com.example.fitbros.Fragments.Tool_BMIFragment"
        android:label="@string/tool_name_BMI"
        tools:layout="@layout/fragment_tool_bmi" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.fitbros.ContactFragment"
        android:label="Contact Us"
        tools:layout="@layout/fragment_contact" />
</navigation>