<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context=".Fragments.Tool_RFMFragment">

    <TextView
        android:id="@+id/swipe"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:text="@string/tool_swipe"
        android:textColor="@color/colorGoldLight"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titleRFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/tool_name_RFM"
        android:textAlignment="center"
        android:textColor="@color/colorBlackCharcoal"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelWaist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:width="@dimen/tool_width_label"
        android:layout_columnSpan="1"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/tool_RFM_waist_circumference"
        android:textSize="@dimen/text_medium" />

    <EditText
        android:id="@+id/inputWaist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="@dimen/margin_button"
        android:background="@color/colorToolInputBox"
        android:ems="10"
        android:hint="@string/tool_RFM_waist_hint"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <TextView
        android:id="@+id/labelHeightRFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/tool_RFM_height"
        android:gravity="right"
        android:width="@dimen/tool_width_label"
        android:textSize="@dimen/text_medium" />

    <EditText
        android:id="@+id/inputHeightRFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="@dimen/margin_button"
        android:background="@color/colorToolInputBox"
        android:ems="10"
        android:hint="@string/tool_RFM_height_hint"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/maleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_button_top_regular"
            android:layout_marginRight="12dp"
            android:background="@color/colorBlackCharcoal"
            android:paddingTop="@dimen/padding_button"
            android:paddingBottom="@dimen/padding_button"
            android:text="@string/button_male"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_general"
            android:textStyle="bold" />

        <Button
            android:id="@+id/femaleButton"
            android:textSize="@dimen/text_general"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_button_top_regular"
            android:background="@color/colorBlackCharcoal"
            android:textColor="@android:color/white"
            android:paddingTop="@dimen/padding_button"
            android:paddingBottom="@dimen/padding_button"
            android:text="@string/button_female" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCalculateRFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button_top_regular"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginBottom="@dimen/margin_button_bottom"
        android:background="@color/colorBlackCharcoal"
        android:paddingTop="@dimen/padding_button"
        android:paddingBottom="@dimen/padding_button"
        android:text="@string/button_RFM_calculate"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_general"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelResultRFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:fontFamily="@font/kaushan_script"
        android:gravity="right"
        android:width="@dimen/tool_width_label"
        android:text="@string/tool_BMI_result"
        android:textSize="@dimen/text_medium" />

    <EditText
        android:id="@+id/outputResultRFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="@dimen/margin_button"
        android:background="@color/colorToolOutputBox"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/tool_RFM_result_hint"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <TextView
        android:id="@+id/labelStatusRFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/tool_RFM_status"
        android:gravity="right"
        android:width="@dimen/tool_width_label"
        android:textSize="@dimen/text_medium" />

    <EditText
        android:id="@+id/outputStatusRFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="@dimen/margin_button"
        android:background="@color/colorToolOutputBox"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/tool_RFM_status_hint"
        android:inputType="numberDecimal"
        android:padding="10dp" />

</GridLayout>